--- a/src/web/WEB-INF/web.xml
+++ b/src/web/WEB-INF/web.xml
@@ -48,6 +48,16 @@
         <url-pattern>/room/room.html</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>OnLightController</servlet-name>
+        <servlet-class>by.barzov.controller.OnLightController</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>OnLightController</servlet-name>
+        <url-pattern>/room/light-on.html</url-pattern>
+    </servlet-mapping>
+
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
     </welcome-file-list>
